Added credit to numberline.

--- a/math/numberline/index.html
+++ b/math/numberline/index.html
@@ -562,5 +562,8 @@ $(window).load(function(){
           </div>
       </form>
     </div>
+<div style="text-align: center;clear: both; padding-top: 10px;">
+<h5 style="color: #000000;">Credit to <a href="http://stackoverflow.com/questions/4182494/how-to-draw-number-lines-using-html">user372551</a> on StackOverflow.</h5>
+</div>
 </body>
 </html>
