--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
 
             <p><a href="math/basetenblocks/"><img src="images/basetenblocks.png" alt="Image of Base-10 Blocks" title="" /></a></p>
 
-            <h2><a href="math/coordinates/">Coordinate Finder</a></h2>
+            <h2><a href="math/coordinates/">Coordinate Finder / Multiplication Table Primer</a></h2>
 
-            <p>Made this when my son wanted to play Battleship, but was having trouble understanding X and Y coordinates.</p>
+            <p>Made this when my son wanted to play Battleship, but was having trouble understanding X and Y coordinates. Updated it to serve as a Multiplication table primer when x and y are both numeric.</p>
 
             <p><a href="math/coordinates/"><img src="images/coordinates.png" alt="Image of Coordinate Finder" title="" /></a></p>
 
