Reformatting Money Counting.

--- a/index.html
+++ b/index.html
@@ -155,6 +155,12 @@
 
             <p><a href="math/basetenblocks/"><img src="images/basetenblocks.png" alt="Image of Base-10 Blocks" title="" /></a></p>
 
+            <h2><a href="math/moneycounting/">Money Counting Game</a></h2>
+
+            <p>For familiarizing children with American currency and counting by dollars and cents.</p>
+
+            <p><a href="math/moneycounting/"><img src="images/moneycounting.png" alt="Image of Base-10 Blocks" title="" /></a></p>
+
             <h2><a href="math/coordinates/">Coordinate Finder / Multiplication Table Primer</a></h2>
 
             <p>Made this when my son wanted to play Battleship, but was having trouble understanding X and Y coordinates. Updated it to serve as a Multiplication table primer when x and y are both numeric.</p>
