Shakespearean Insult Generator

--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@
 
             <p><a href="reading/speechboard/"><img src="images/speechboard.png" alt="Image of Speechboard" title="" /></a></p>
 
+            <h2><a href="reading/shakespeareaninsultgenerator/">Shakespearean Insult Generator</a></h2>
+
+            <p>Based on the classic meme, generates a Shakespearean insult. Included here as a demonstration of a very easy program anyone can write if they "View Source" and read the code.</p>
+
+            <p>Adapted from <a href="https://gist.github.com/matthewtole/3550487">matthewtole ShakespeareaInsult.js</a> and <a href="http://web.mit.edu/afs/athena.mit.edu/user/d/r/dryfoo/www/Funny-pages/shakespeare-insult-kit.html">Shakespeare Insult Kit</a>.</p>
+            
+            <p><a href="reading/shakespeareaninsultgenerator/"><img src="images/shakespeareaninsultgenerator.png" alt="Image of Shakespearean Insult Generator title="" /></a></p>
+
             <h2><a href="math/booleaniching/">The Boolean iChing</a></h2>
 
             <p>Execute boolean transformations on iChing concepts to find their relationships.</p>
