--- a/reading/shakespeareaninsultgenerator/index.html
+++ b/reading/shakespeareaninsultgenerator/index.html
@@ -172,7 +172,7 @@ $( document ).ready(function() {
 </head>
 <body>
 <div id="stage">
-    <div id="insultstage"></div>
+    <div id="insultstage">Click "Insult Me!" below.</div>
 </div>
 <div class="footer">
     <div><input type="button" id="insultbutton" class="myButton" value="Insult Me!" /></div>
